# python-pipeline-creator

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  setup.py
pipeline_creator/: __init__.py  main.py
pipeline_creator/commands/: __init__.py  add_stage.py  deploy.py  generate.py  init.py  logs.py  notifications.py  status.py  templates.py
pipeline_creator/notifications/: __init__.py  channels.py  event_handlers.py  notification_service.py  templates.py
pipeline_creator/templates/: __init__.py  cdk_python.py  template_inheritance.py  template_manager.py  template_schema.py  template_service.py
pipeline_creator/templates/predefined/nodejs-api/: config.json  template.json
pipeline_creator/templates/predefined/python-api/: config.json  template.json
pipeline_creator/templates/predefined/react-app/: config.json  template.json
pipeline_creator/templates/stages/: extra_stages.py
pipeline_creator/utils/: __init__.py  aws_utils.py  config.py  console.py  file_utils.py
tests/: __init__.py  test_init.py
